[package]
name = "pace"
version = "0.0.1"
edition = "2021"

[lib]
name = "pace"
homepage = "https://nersent.com"
repository = "https://github.com/nersent/pace"
keywords = ["nersent", "pace", "python", "rust", "ta", "technical", "analysis", "pandas", "talib"]
crate-type = ["cdylib", "rlib"]
documentation = "https://github.com/nersent/pace/docs/index.md"

[dependencies]
polars = { version = "0.27.2", features = ["parquet", "lazy"] }
itertools = "0.10.5"
similar-asserts = "1.4.2"
similar = "2.2.1"
colored = "2.0.0"
pyo3 = { version = "0.18.0", features = ["extension-module", "macros"] }
chrono = "0.4.23"
kdam = "0.3.0"
mimalloc = { version = "0.1.34", default-features = true }
rand = "0.8.5"
